--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "strapi-plugin-email": "3.1.4",
     "strapi-plugin-upload": "3.1.4",
     "strapi-plugin-users-permissions": "3.1.4",
+    "strapi-provider-upload-aws-s3": "^3.2.0-beta.1",
     "strapi-utils": "3.1.4"
   },
   "author": {
