--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "pm2": "pm2 start ecosystem.config.js",
+    "pm2-save": "pm2 save",
+    "pm2-stop": "pm2 delete all",
+    "test": "node test.js"
   },
   "devDependencies": {},
   "dependencies": {
     "knex": "<0.20.0",
     "pg": "^8.4.1",
+    "pm2": "^4.5.0",
     "sqlite3": "latest",
     "strapi": "3.1.4",
     "strapi-admin": "3.1.4",
@@ -22,7 +27,7 @@
     "strapi-plugin-email": "3.1.4",
     "strapi-plugin-upload": "3.1.4",
     "strapi-plugin-users-permissions": "3.1.4",
-    "strapi-provider-upload-aws-s3": "^3.2.0-beta.1",
+    "strapi-provider-upload-aws-s3": "^3.2.3",
     "strapi-utils": "3.1.4"
   },
   "author": {
