--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "pg": "^8.4.1",
     "pm2": "^4.5.0",
     "sqlite3": "latest",
-    "strapi": "3.1.4",
+    "strapi": "^3.2.4",
     "strapi-admin": "3.1.4",
     "strapi-connector-bookshelf": "3.1.4",
     "strapi-plugin-content-manager": "3.1.4",
